--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -316,7 +316,7 @@
     (closeModal)="toggleSearchModal($event)"
     *ngIf="marketSearch"
     [pairs]="currencyPairs"
-    [isFiat]="isFiat"
+    [currency]="currencyName"
   >
   </app-market-search>
 
