--- a/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
@@ -37,16 +37,16 @@
       <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
-      <span>{{item.exExchangeRate  | roundCurrency: isFiat(1) | formatCurrency}} {{arrPairName[1]}}</span>
+      <span>{{item.exExchangeRate  | roundCurrency: arrPairName[1] | formatCurrency}} {{arrPairName[1]}}</span>
     </td>
     <td class="table__cell">
-      <span>{{item.amountBase | roundCurrency: isFiat(0) | formatCurrency}} {{arrPairName[0]}}</span>
+      <span>{{item.amountBase | roundCurrency: arrPairName[0] | formatCurrency}} {{arrPairName[0]}}</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>{{item.commissionFixedAmount | roundCurrency: isFiat(1) | formatCurrency}} {{arrPairName[1]}}</span>
+      <span>{{item.commissionFixedAmount | roundCurrency: arrPairName[1] | formatCurrency}} {{arrPairName[1]}}</span>
     </td>
     <td class="table__cell">
-      <span>{{item.amountWithCommission | roundCurrency: isFiat(1) | formatCurrency}} {{arrPairName[1]}}</span>
+      <span>{{item.amountWithCommission | roundCurrency: arrPairName[1] | formatCurrency}} {{arrPairName[1]}}</span>
     </td>
     <td class="table__cell">
       <button class="btn btn--small btn--empty-red btn--hidden"
@@ -185,7 +185,7 @@
     <!-- <a href="#">{{userBalance | roundCurrency: isFiat(0) | formatCurrency}} {{arrPairName[0]}}</a> -->
     </div>
     <div>
-    {{'Fee:' | translate}} {{order.commission | roundCurrency: isFiat(0) | formatCurrency}} {{arrPairName[0]}}
+    {{'Fee:' | translate}} {{order.commission | roundCurrency: arrPairName[0] | formatCurrency}} {{arrPairName[0]}}
     </div>
     </div>
     <div class="row row--jcsb row--aic widget__trading-row">
