--- a/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
@@ -71,25 +71,25 @@
     </td>
     <td class="table__cell">
       <span>
-        {{item.exExchangeRate | roundCurrency: isFiat(item.currencyPairName, 2) | formatCurrency}}
+        {{item.exExchangeRate | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
         {{item.currencyPairName | splitCurrency: 2}}
       </span>
     </td>
     <td class="table__cell">
       <span>
-        {{item.amountBase | roundCurrency: isFiat(item.currencyPairName, 1 ) | formatCurrency}}
+        {{item.amountBase | roundCurrency: currency(item.currencyPairName, 1 ) | formatCurrency}}
         {{item.currencyPairName | splitCurrency: 1}}
       </span>
     </td>
     <td class="table__cell txt-grey">
       <span>
-        {{item.commissionFixedAmount | roundCurrency: isFiat(item.currencyPairName, 2) | formatCurrency}}
+        {{item.commissionFixedAmount | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
         {{item.currencyPairName | splitCurrency: 2}}
       </span>
     </td>
     <td class="table__cell">
       <span>
-        {{item.amountWithCommission | roundCurrency: isFiat(item.currencyPairName, 2) | formatCurrency}}
+        {{item.amountWithCommission | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
         {{item.currencyPairName | splitCurrency: 2}}
       </span>
     </td>
