--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -258,7 +258,7 @@
           </td>
           <td class="table__cell">
             <span>
-              {{item.amountConvert | roundCurrency: isFiat(item.currencyPairName, 1) | formatCurrency}}
+              {{item.amountConvert | roundCurrency: currency(item.currencyPairName, 1) | formatCurrency}}
               {{item.currencyPairName | splitCurrency: 1}}
             </span>
           </td>
@@ -267,18 +267,18 @@
           </td>
           <td class="table__cell">
             <span>
-              {{item.exExchangeRate | roundCurrency: isFiat(item.currencyPairName, 2) | formatCurrency}}
+              {{item.exExchangeRate | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
               {{item.currencyPairName | splitCurrency: 2}}
             </span>
           </td>
           <td class="table__cell">
             <span class="orders__comission"></span><span class="orders__comission-usd"><span>
-              {{item.commissionFixedAmount | roundCurrency: isFiat(item.currencyPairName, 2) | formatCurrency}}
+              {{item.commissionFixedAmount | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
               {{item.currencyPairName | splitCurrency: 2}}</span></span>
           </td>
           <td class="table__cell">
             <span>
-              {{item.amountWithCommission | roundCurrency: isFiat(item.currencyPairName, 2) | formatCurrency}}
+              {{item.amountWithCommission | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
               {{item.currencyPairName | splitCurrency: 2}}
             </span>
           </td>
