--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -198,7 +198,7 @@
 
       <div class="popup__links-wrap">
         <div class="agree-terms"><span class="accept-icon"><img src="../../assets/img/checkbox.svg" alt=""></span>{{'By registering you agree with' | translate}}</div>
-        <a class="popup__link" >{{'Terms of Use' | translate}}</a>
+        <a class="popup__link" >{{'Terms and conditions' | translate}}</a>
       </div>
       <div class="popup__links-wrap popup__links-wrap--hidden-mob">
         <span>{{'Already have an account?' | translate}}</span>
