--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -20,7 +20,7 @@
         <span
           class="wrap-input__show-password"
           (click)="isPasswordCurrVisible = !isPasswordCurrVisible"
-          [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
+          [ngClass]="{'wrap-input__show-password--active': isPasswordCurrVisible}"
         ></span>
         <!--Input error section starts-->
         <ng-container *ngIf="currentPassword.touched && currentPassword.errors != null">
@@ -40,19 +40,22 @@
             class="wrap-input__message"
             *ngIf="currentPassword.errors['maxlength']"
           >
-            {{'Password cannot be more than 20 characters long.' | translate}}
+            {{'Password cannot be more than 40 characters long.' | translate}}
           </span>
           <span
             class="wrap-input__message"
-            *ngIf="currentPassword.errors['passwordValidation']"
-            >
+            *ngIf="currentPassword.errors['passwordValidation'] &&
+                  !(currentPassword.errors['minlength'] ||
+                    currentPassword.errors['required'] ||
+                    currentPassword.errors['maxlength'])"
+          >
             {{('Password cannot be less than 8 and more than 40 characters long and should contain of letters (a-z),' +
                 ' numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+\' characters.') | translate}}
           </span>
         </ng-container>
         <!--Input error section ends-->
       </div>
-      <span class="settings__form-notice">{{'for safety, to confirm that you it is you' | translate}} </span>
+      <!-- <span class="settings__form-notice">{{'for safety, to confirm that you it is you' | translate}} </span> -->
     </div>
     <div class="settings__form-row">
       <div class="wrap-input wrap-input--fix230"
@@ -93,7 +96,10 @@
           </span>
           <span
             class="wrap-input__message"
-            *ngIf="firstPassword.errors['passwordValidation']"
+            *ngIf="firstPassword.errors['passwordValidation'] &&
+                  !(firstPassword.errors['minlength'] ||
+                    firstPassword.errors['required'] ||
+                    firstPassword.errors['maxlength'])"
           >
             {{('Password cannot be less than 8 and more than 40 characters long and should contain of letters (a-z),' +
                 ' numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+\' characters.') | translate}}
@@ -102,7 +108,7 @@
 
         <!--Input error section ends-->
       </div>
-      <span class="settings__form-notice">{{'for safety, to confirm that you it is you' | translate}} </span>
+      <!-- <span class="settings__form-notice">{{'for safety, to confirm that you it is you' | translate}} </span> -->
     </div>
     <div class="settings__form-row">
       <div class="wrap-input wrap-input--fix230"
@@ -143,7 +149,10 @@
           </span>
           <span
             class="wrap-input__message"
-            *ngIf="secondPassword.errors['passwordValidation']"
+            *ngIf="secondPassword.errors['passwordValidation'] &&
+                   !(secondPassword.errors['minlength'] ||
+                     secondPassword.errors['required'] ||
+                     secondPassword.errors['maxlength'])"
           >
             {{('Password cannot be less than 8 and more than 40 characters long and should contain of letters (a-z),' +
                 ' numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+\' characters.') | translate}}
@@ -158,7 +167,7 @@
 
         <!--Input error section ends-->
       </div>
-      <span class="settings__form-notice">{{'for safety, to confirm that you it is you' | translate}} </span>
+      <!-- <span class="settings__form-notice">{{'for safety, to confirm that you it is you' | translate}} </span> -->
     </div>
 
 
@@ -167,8 +176,8 @@
     <button
       class="btn settings__form-btn"
       [ngClass]="{'settings__form-btn--active': form.valid}"
+      [disabled]="form.invalid"
       >{{'Change password' | translate}}</button>
-      <!-- [disabled]="form.invalid" -->
   </form>
 </div>
 <!--<div class="notification-popup change-pass-notif">-->
