--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -26,13 +26,13 @@
             {{'Session Time' | translate}}
           </a>
         </li>
-        <li class="sidebar-menu__item">
+        <!-- <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
              [routerLink]="['/settings/nickname']">
             {{'Add Nickname' | translate}}
           </a>
-        </li>
+        </li> -->
         <!--<li class="sidebar-menu__item">-->
           <!--<a class="sidebar-menu__link"-->
              <!--[routerLinkActive]="['sidebar-menu__link&#45;&#45;active']"-->
@@ -40,20 +40,20 @@
             <!--Verification-->
           <!--</a>-->
         <!--</li>-->
-        <li class="sidebar-menu__item">
+        <!-- <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
              [routerLink]="['/settings/e-notification']">
             {{'Notifications' | translate}}
           </a>
-        </li>
-        <li class="sidebar-menu__item">
+        </li> -->
+        <!-- <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
              [routerLink]="['/settings/view']">
             {{'View' | translate}}
           </a>
-        </li>
+        </li> -->
       </ul>
     </div>
     <div style="width:100%">
