--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -174,7 +174,7 @@
 
     <!---->
     <button
-      class="btn settings__form-btn"
+      class="btn settings__form-btn settings__password-btn"
       [ngClass]="{'settings__form-btn--active': form.valid}"
       [disabled]="form.invalid"
       >{{'Change password' | translate}}</button>
