--- a/src/app/shared/components/dynamic-input/dynamic-input.component.scss
+++ b/src/app/shared/components/dynamic-input/dynamic-input.component.scss
@@ -69,6 +69,14 @@ ul.select__list {
     }
   }
 }
-::ng-deep .ps__rail-y {
-  // margin-right: 2px !important;
+
+app-balance{
+
+.ps__rail-y {
+  
+  margin-right: 2px !important;
 }
+}
+app-balance  perfect-scrollbar > .ps.ps--active-y > .ps__rail-y{
+    background-color: rgba(0, 0, 0, 0.1) !important;
+  }
