add momment pipe lib

--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -47,8 +47,8 @@
               <td class="table__cell table__cell--tal">
                 <div>{{item.currencyPairName}}</div>
                 <div class="table__date-time">
-                  <div>{{item.dateCreation | date:"EEEEEE"}} {{item.dateCreation | date:"dd.MM.yyyy"}}</div>
-                  <div>{{item.dateCreation | date:"HH:mm:ss"}}</div>
+                  <div>{{item.dateCreation | amDateFormat:"dd"}} {{item.dateCreation | amDateFormat:"DD.MM.YYYY"}}</div>
+                  <div>{{item.dateCreation | amDateFormat:"HH:mm:ss"}}</div>
                 </div>
               </td>
               <td class="table__cell table__cell--tal">
@@ -245,8 +245,8 @@
             *ngFor="let item of orderItems$ | async | paginate: {itemsPerPage: countPerPage, currentPage: currentPage, totalItems: countOfEntries$ | async}">
           <td class="table__cell">
             <div class="table__date-time">
-              <div>{{item.dateCreation | date:"EEEEEE"}} {{item.dateCreation | date:"dd.MM.yyyy"}}</div>
-              <div>{{item.dateCreation | date:"HH:mm:ss"}}</div>
+              <div>{{item.dateCreation | amDateFormat:"dd"}} {{item.dateCreation | amDateFormat:"DD.MM.YYYY"}}</div>
+              <div>{{item.dateCreation | amDateFormat:"HH:mm:ss"}}</div>
             </div>
           </td>
           <td class="table__cell">
