--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
@@ -134,8 +134,7 @@
         <button class="btn popup__btn"
                 (click)="afterResolvedCaptcha()"
                 [disabled]="!pinForm.valid"
-                [ngClass]="{'popup__btn--active': pinForm.valid,
-                'popup__btn--error': !pinForm.valid && pinForm.get('pin').touched}">{{'Submit' | translate}}
+                [ngClass]="{'popup__btn--active': pinForm.valid}">{{'Submit' | translate}}
         </button>
       </form>
       <div class="popup__links-wrap  popup__links-wrap--center">
