--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -61,16 +61,25 @@
     &__item {
       position: relative;
       z-index: 1;
-      //height: 100%;
-      display: -webkit-flex;
-      display: -ms-flex;
+      height: 100%;
       display: flex;
       align-items: center;
 
       &--with-submenu {
         &:hover {
+          .menu__link--drop{
+            color: #fff;
+            cursor: pointer;
+            &:after{
+              transform: rotate(180deg);
+              transform-origin:center;
+            }
+          }
           .submenu {
-            height: auto;
+            opacity: 1;
+            transform: translateY(0);
+            pointer-events: auto;
+            transition: .3s;
 
             &__list {
               &:before {
@@ -248,18 +257,22 @@
   }
 
   .submenu {
-    height: 0;
-    overflow: hidden;
+
     position: absolute;
-    top: 16px;
+    top: 40px;
     left: 16px;
     z-index: 4;
+    opacity: 0;
+    pointer-events:none;
     background-color: #fff;
     border-radius: 4px;
+    transform: translateY(-10px);
+    transition: .2s;
     .menu__link-text{
-      font-size: 16px;
-      font-weight: 400;
+      font-size: 14px;
+      font-weight: 300;
       color: #191A39;
+      padding: 0;
     }
 
     &--notification {
@@ -285,7 +298,7 @@
       display: flex;
       flex-direction: column;
       align-items: stretch;
-
+      padding-top: 12px;
 
       &--language {
         display: grid;
@@ -306,7 +319,7 @@
       display: -webkit-flex;
       display: -ms-flex;
       display: flex;
-      padding: 10px 12px;
+      padding: 0 10px 12px;
       color: rgba(255, 255, 255, 0.7);
       text-decoration: none;
       color: rgba(255, 255, 255, 0.7);
@@ -429,7 +442,8 @@
     align-items: center;
     justify-content: center;
     padding: 0 16px;
-     &:after,&:before{
+    cursor: pointer;
+    &:after,&:before{
       content: '';
       position: absolute;
       right: 0;
@@ -438,46 +452,58 @@
       height: 28px;
       background-color: rgba(255, 255, 255, 0.3) ;
     }
- &:before{
+    &:before{
       right: auto;
       left: 0;
     }
     &:hover{
+      svg{
+        path{
+          fill: #fff;
+        }
+      }
       .login-menu__submenu{
-        height: auto;
-        padding: 0 12px;
+        opacity: 1;
+        transform: translateY(0);
+        pointer-events: auto;
+        transition: .3s;
       }
     }
     &__icon{
+      cursor: pointer;
       svg{
-        opacity: .3;
+        opacity: 1;
         vertical-align: middle;
       }
       &:hover{
         svg{
-          opacity: 1;
+          path{
+            fill: #fff;
+          }
         }
       }
     }
     &__submenu{
       position: absolute;
+      cursor: default;
       top: 100%;
-      left: 0;
-      height: 0;
-      overflow: hidden;
+      padding: 0 12px;
+      right: 0;
       background-color: #fff;
-      -webkit-border-radius: 4px;
-      -moz-border-radius: 4px;
       border-radius: 4px;
-          color: #191A39;
-          font-weight: 400;
+      color: #191A39;
+      font-weight: 400;
+      opacity: 0;
+      pointer-events: none;
+      transform: translateY(-20px);
+      transition: .2s;
     }
     &__submenu-item{
       border-bottom: 1px solid rgba(0, 0, 0, 0.15);
       padding: 8px 0;
       color: #237BEF;
       .item-title{
-            color: #191A39;
+        color: #191A39;
         margin-bottom: 4px;
         white-space: nowrap;
       }
@@ -516,7 +542,7 @@
     }
   }
   .language {
-      position: relative;
+    position: relative;
     padding: 0 16px;
     &:after{
       content: '';
@@ -590,9 +616,9 @@
       }
     }
     &__container{
-        position: absolute;
-        top: 48px;
-        opacity: 0;
+      position: absolute;
+      top: 48px;
+      opacity: 0;
 
     }
   }
@@ -678,8 +704,6 @@
     overflow-x: scroll;
 
     &-link {
-      display: -webkit-flex;
-      display: -ms-flex;
       display: flex;
       flex-direction: column;
       min-width: 64px;
@@ -1066,16 +1090,16 @@
 }
 
 .submenu{
-.submenu__link{
-  &:hover{
+  .submenu__link{
+    &:hover{
+      .menu__link-text{
+        color: #94C2FF;
+      }
+    }
     .menu__link-text{
-      color: #94C2FF;
+      &::after{
+        display: none;
+      }
     }
   }
-  .menu__link-text{
-    &::after{
-      display: none;
-    }
-  }
-}
 }
