--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -252,16 +252,16 @@
           <td class="table__cell">
             <div class="orders__pair-wrap">
               <div class="orders__pair">
-                <div class="orders__pair-icon">
+                <!-- <div class="orders__pair-icon">
                   <img src="../../assets/img/btc-icon.svg">
-                </div>
+                </div> -->
                 <span>{{item.currencyPairName | splitCurrency: 1}}</span>
               </div>
               <span style="margin: 0 8px;">/</span>
               <div class="orders__pair">
-                <div class="orders__pair-icon">
+                <!-- <div class="orders__pair-icon">
                   <img src="../../assets/img/eth-icon.svg">
-                </div>
+                </div> -->
                 <span>{{item.currencyPairName | splitCurrency: 2}}</span>
               </div>
             </div>
