--- a/src/assets/scss/components/_trading-notification.scss
+++ b/src/assets/scss/components/_trading-notification.scss
@@ -101,7 +101,8 @@
     }
     &__content{
       margin-top: 14px;
-      align-items: stretch;
+      margin-bottom: 14px;
+      align-items: center;
       justify-content: flex-start;
     }
     &__text{
