--- a/src/assets/scss/pages/_login-registration.scss
+++ b/src/assets/scss/pages/_login-registration.scss
@@ -327,7 +327,7 @@
       color: #191A39;
     }
     &__subtitle {
-      color: #fff;
+      color: #191A39;
     }
     &__email-link {
       color: $light-blue;
