--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -43,6 +43,7 @@
 @import "components/scroll";
 @import "components/revoke-request";
 @import "components/_service-style";
+@import "components/_hints";
 
 //@import "components/footer";
 @import "components/modal";
