--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
         <li class="footer__menu-item"><a class="footer__menu-link" [routerLink]="['/static/privacy-policy']">{{'Privacy Policy' | translate}}</a></li>
         <li class="footer__menu-item"><a class="footer__menu-link" [routerLink]="['/static/contacts']">{{'Contacts and Support' | translate}} </a></li>
         <li class="footer__menu-item"><a class="footer__menu-link" [routerLink]="['/static/about-us']">{{'About us' | translate}}</a></li>
-        <li class="footer__menu-item"><a class="footer__menu-link" href="https://coins.exrates.me/">{{'Submit a coin for listing' | translate}}</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" href="https://coins.exrates.me/" target="blank">{{'Submit a coin for listing' | translate}}</a></li>
         <!-- <li class="footer__menu-item"><a class="footer__menu-link" href="#">Referral</a></li> -->
       </ul>
       <div class="footer__app-wrap">
