--- a/src/app/popups/already-restored-password-popup/already-restored-password-popup.component.scss
+++ b/src/app/popups/already-restored-password-popup/already-restored-password-popup.component.scss
@@ -8,7 +8,7 @@
     height: 12px;
     right: 16px;
     top: 16px;
-    background-image: url("assets/img/close-light-blue.svg");
+    // background-image: url("assets/img/close-light-blue.svg");
   }
   .text{
     font-size: 14px;
