--- a/src/assets/scss/components/_dropdown.scss
+++ b/src/assets/scss/components/_dropdown.scss
@@ -112,3 +112,8 @@ app-dynamic-input-dashboard{
 app-dynamic-input-dashboard  perfect-scrollbar > .ps.ps--active-y > .ps__rail-y{
   background-color: rgba(37, 37, 67,.2) !important;
 }
+
+
+.select__list-searching perfect-scrollbar > .ps.ps--active-y > .ps__rail-y{
+  background-color: rgba(37, 37, 67,.2) !important;
+}
