--- a/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
@@ -11,7 +11,8 @@
     </th>
     <!--<th class="table__cell-head table__cell-head&#45;&#45;tal">Order</th>-->
     <th class="table__cell-head table__cell-head--tal">{{'Type' | translate}}</th>
-    <th class="table__cell-head table__cell-head--tal">{{'Average Price' | translate}}</th>
+    <th class="table__cell-head table__cell-head--tal">{{'Limit Price' | translate}}</th>
+    <th class="table__cell-head table__cell-head--tal">Stop Price</th>
     <th class="table__cell-head table__cell-head--tal">{{'Amount' | translate}}</th>
     <th class="table__cell-head table__cell-head--tal">{{'Fee' | translate}}</th>
     <th class="table__cell-head table__cell-head--tal">{{'Total' | translate}}</th>
@@ -35,6 +36,9 @@
       <span [ngClass]="{'orders__type-sell': item.operationTypeEnum === 'SELL', 'orders__type-buy': item.operationTypeEnum === 'BUY' }"
       >{{item.operationType}} <span></span></span>
       <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
+    </td>
+    <td class="table__cell">
+      <span>{{item.exExchangeRate  | roundCurrency: arrPairName[1] | formatCurrency}} {{arrPairName[1]}}</span>
     </td>
     <td class="table__cell">
       <span>{{item.exExchangeRate  | roundCurrency: arrPairName[1] | formatCurrency}} {{arrPairName[1]}}</span>
