--- a/src/app/funds/pending-request-mob/pending-request-mob.component.html
+++ b/src/app/funds/pending-request-mob/pending-request-mob.component.html
@@ -54,8 +54,8 @@
                   <span>{{item.operation === 'REFILL' ? 'Refill' : ''}}{{item.operation === 'WITHDRAW' ? 'Withdraw' : ''}}</span>
                 </div>
                 <div class="balance__request-mob-date">
-                  <div>{{item.date | dateWrapper | date: 'EEEEEE dd.MM.yyyy'}}</div>
-                  <div>{{item.date | dateWrapper | date: 'HH:mm:ss'}}</div>
+                  <div>{{item.date | dateWrapper | amDateFormat: 'dd DD.MM.YYYY'}}</div>
+                  <div>{{item.date | dateWrapper | amDateFormat: 'HH:mm:ss'}}</div>
                 </div>
               </td>
               <td class="table__cell table__cell--tal">
