--- a/src/app/funds/balance/pending-request-table/pending-request-table.component.html
+++ b/src/app/funds/balance/pending-request-table/pending-request-table.component.html
@@ -22,8 +22,8 @@
   >
     <td class="table__cell">
       <div class="table__date-time">
-        <div>{{item.date | dateWrapper | date: 'EEEEEE dd.MM.yyyy'}}</div>
-        <div>{{item.date | dateWrapper | date: 'HH:mm:ss'}}</div>
+        <div>{{item.date | dateWrapper | amDateFormat: 'dd DD.MM.YYYY'}}</div>
+        <div>{{item.date | dateWrapper | amDateFormat: 'HH:mm:ss'}}</div>
       </div>
     </td>
     <td class="table__cell">
