--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -47,7 +47,7 @@
               <td class="table__cell table__cell--tal">
                 <div>{{item.currencyPairName}}</div>
                 <div class="table__date-time">
-                  <div>{{item.dateCreation | amDateFormat:"dd"}} {{item.dateCreation | amDateFormat:"DD.MM.YYYY"}}</div>
+                  <div>{{item.dateCreation | amDateFormat:"DD.MM.YYYY"}}</div>
                   <div>{{item.dateCreation | amDateFormat:"HH:mm:ss"}}</div>
                 </div>
               </td>
