--- a/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
@@ -11,7 +11,8 @@
     </th>
     <!--<th class="table__cell-head table__cell-head&#45;&#45;tal">Order</th>-->
     <th class="table__cell-head table__cell-head--tal">{{'Type' | translate}}</th>
-    <th class="table__cell-head table__cell-head--tal">{{'Average Price' | translate}}</th>
+    <th class="table__cell-head table__cell-head--tal">{{'Limit Price' | translate}}</th>
+    <th class="table__cell-head table__cell-head--tal">{{'Stop Price' | translate}}</th>
     <th class="table__cell-head table__cell-head--tal">{{'Amount' | translate}}</th>
     <th class="table__cell-head table__cell-head--tal">{{'Fee' | translate}}</th>
     <th class="table__cell-head table__cell-head--tal">{{'Total' | translate}}</th>
@@ -60,18 +61,24 @@
     </td>
     <td class="table__cell">
       <div class="table__date-time">
-        <div>{{item.dateCreation | amDateFormat:"dd"}} {{item.dateCreation | amDateFormat:"DD.MM.YYYY"}}</div>
+        <div>{{item.dateCreation | amDateFormat:"DD.MM.YYYY"}}</div>
         <div>{{item.dateCreation | amDateFormat:"HH:mm:ss"}}</div>
       </div>
     </td>
     <td class="table__cell">
       <span [ngClass]="{'orders__type-sell': item.operationTypeEnum === 'SELL', 'orders__type-buy': item.operationTypeEnum === 'BUY' }"
-      >{{item.operationType}} <span></span></span>
+      >{{item.operationTypeEnum}} <span></span></span>
       <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
       <span>
         {{item.exExchangeRate | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
+        {{item.currencyPairName | splitCurrency: 2}}
+      </span>
+    </td>
+    <td class="table__cell">
+      <span>
+        {{item.stopRate | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
         {{item.currencyPairName | splitCurrency: 2}}
       </span>
     </td>
