--- a/src/app/shared/components/price-input/price-input.component.html
+++ b/src/app/shared/components/price-input/price-input.component.html
@@ -1,5 +1,4 @@
-<input appOnlyNumbers
-       class="wrap-input__input"
+<input class="wrap-input__input"
        [(ngModel)]='value'
        [class.dirty]="price.dirty"
        [ngClass]="{'wrap-input__input--small': forTrading}"
