--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -233,7 +233,8 @@
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Type'| translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Amount'| translate}}</th>
           <th class="table__cell-head table__cell-head--tal" style="width: 60px;"></th>
-          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Price'| translate}}</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Limit price'| translate}}</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Stop price'| translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Comission'| translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total'| translate}}</th>
           <th class="table__cell-head table__cell-head--tal" style="width: 80px;"></th>
@@ -268,6 +269,12 @@
           <td class="table__cell">
             <span>
               {{item.exExchangeRate | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
+              {{item.currencyPairName | splitCurrency: 2}}
+            </span>
+          </td>
+          <td class="table__cell">
+            <span>
+              {{item.stopRate | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
               {{item.currencyPairName | splitCurrency: 2}}
             </span>
           </td>
