--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -233,7 +233,8 @@
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Date' | translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Pair' | translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Type' | translate}}</th>
-          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Price' | translate}}</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Limit price' | translate}}</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Stop price' | translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Amount' | translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Comission' | translate}}</th>
           <th class="table__cell-head table__cell-head--sort table__cell-head--tar">{{'In total' | translate}}</th>
@@ -272,6 +273,12 @@
           <td class="table__cell">
             <span>
               {{item.exExchangeRate | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
+              {{item.currencyPairName | splitCurrency: 2}}
+            </span>
+          </td>
+          <td class="table__cell">
+            <span>
+              {{item.stopRate | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
               {{item.currencyPairName | splitCurrency: 2}}
             </span>
           </td>
