--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -743,8 +743,8 @@
       &--left {
         margin: 0 32px 4px 16px;
         .widget__message {
-          margin-right: 28px;
-          max-width: 288px;
+          margin-right: 18px;
+          max-width: 268px;
         }
       }
       &--right {
@@ -1027,6 +1027,15 @@
       }
     }
     &__limit-dropdown {
+      &:hover{
+        .dropdown__btn {
+
+        &:after{
+          transform: rotate(180deg);
+          transform-origin: center;
+        }
+        }
+      }
       .dropdown__btn {
         color: #fff;
         &:before {
@@ -1039,15 +1048,16 @@
       }
       .dropdown__list {
         border: none;
-        -webkit-border-radius: 4px;
-        -moz-border-radius: 4px;
         border-radius: 4px;
-        background-color: $dark-indigo;
+        background-color: #fff;
       }
       .dropdown__item {
-        color: #fff;
+        font-size: 14px;
+        font-weight: 300;
+        color: #191A39;
         &:hover {
-          background-color: $darker-blue;
+          background-color: rgba(242,246,250,.7);
+          color: #94C2FF;
         }
       }
     }
